# jeu-2048

./: .buildinfo  .gitignore  INSTALL  README.md  __main__.html  details.html  documentation.html  fct_tests.html  genindex.html  gitlab-ci.html  index.html  installation.html  jeu2048.html  jeu2048.subpackages.html  main.html  objects.inv  py-modindex.html  regles.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.html  setup.py  test_script.html
.doctrees/: __main__.doctree  details.doctree  documentation.doctree  environment.pickle  fct_tests.doctree  gitlab-ci.doctree  index.doctree  installation.doctree  jeu2048.doctree  jeu2048.subpackages.doctree  main.doctree  regles.doctree  setup.doctree  test_script.doctree
.github/workflows/: deploy.yml
_modules/: index.html
_modules/jeu2048/: __main__.html  game.html
_modules/jeu2048/subpackages/: grid_setup.html  move_grid.html
_sources/: __main__.rst.txt  installation.rst.txt
_static/: bizstyle.js
docs/: conf.py  details.rst  documentation.rst  fct_tests.rst  index.rst  jeu2048.rst  jeu2048.subpackages.rst  main.rst  regles.rst  test_script.rst
jeu2048/: __init__.py  __main__.py  game.py
jeu2048/subpackages/: __init__.py  grid_setup.py  move_grid.py
tests/: test_mod.py
