[metadata]
name = jeu2048
version = attr: jeu2048.__version__
description = Jeu 2048
long_description = file: README.md
author = Mathis Dubau
author_email = mathis.dubau@etu.univ-lyon1.fr
license = BSD 3-Clause "New" or "Revised" License
license_files = LICENSE
classifiers =
    # https://pypi.org/classifiers/
    Development Status :: 1 - Planning
    Intended Audience :: Education  
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.6
    Topic :: Education

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts = 
    jeu2048 = jeu2048.__main__:main
    
[options.extras_require]
docs =
     nbsphinx
     ipython
tests =
      pytest
      attrs==21.2.0
      coverage

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[options.package_data]
# Include config/ directory as data
* = config/*

[tool.pytest]
minversion = 7.0
addopts = -v
testpaths =
    tests

